Fixed padding that causes unwanted scrollbar

--- a/meshcms3/web/meshcms/admin/theme/main.css
+++ b/meshcms3/web/meshcms/admin/theme/main.css
@@ -42,7 +42,7 @@
 
 #footer {
   border-top: 1px solid #7ecada;
-  padding: 0.2em 0.2em 0.6em 0.2em;
+  padding: 0.2em 0 0.6em 0;
   text-align: center;
 }
 
